kermeta_projects/fr.irisa.triskell.kermeta.tests/test/io/constraintchecker_tests/invalid/009_requiringFiles1.kmt
/* $Id: $
 * Creation date: November 21, 2007
 * License:
 * Copyright:
 * Authors:
 */
@mainClass "root_package::Main"
@mainOperation "main"


package root_package;


require kermeta

require "requiringFiles/My.ecore"
require "requiringFiles/MyCopy.ecore"

class Main
{
	operation main() : Void is do 
		// TODO: implement 'main' operation
	end
}